<resources>
    <string name="app_name">Ettendance</string>
    <string name="signin">Sign In   </string>
    <string name="signup">   Sign Up</string>
    <string name="email">E-mail</string>
    <string name="pwd">Password</string>
    <string name="name">Name</string>
    <string name="addClass">Add a Class</string>
    <string name="checkin">Check In</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_invalid_ID">Student ID must have the length of 7</string>
    <string name="error_invalid_confirm">This password does not match</string>
    <string name="error_already_registered">This email is already registered</string>
    <string name="error_not_registered">This email has not been registered</string>


    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication error, Please enter a valid email and password or sign up</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_login">Already registered. Login !!</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_sign_up">Sign Up !!</string>
    <string name="err_msg_email">Enter a valid email.</string>
    <string name="err_msg_required">Required !!</string>
    <string name="err_msg_password">Enter a valid password with min 6 characters.</string>
    <string name="btn_link_to_signup">Don\'t have an account, Signup !!</string>
    <string name="my_classes">My Classes</string>
    <string name="welcome">welcome</string>
    <string name="title_activity_p_map">Map</string>
</resources>
